# load_to_rustacean

./: .gitignore  README.md
00_hello_world/: main.rs
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: lib.rs
branches/: Cargo.toml
branches/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs
communicator/: Cargo.toml
communicator/src/: lib.rs
enums/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
functional/: Cargo.toml
functional/src/: lib.rs  main.rs
generics/: Cargo.toml
generics/src/: lib.rs  main.rs
guessing_game/: Cargo.toml
guessing_game/src/: lib.rs  main.rs
hello_cargo/: Cargo.toml
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
pattern_matching/: Cargo.toml
pattern_matching/src/: lib.rs  main.rs
structs/: Cargo.toml
structs/src/: lib.rs  main.rs
variables/: Cargo.toml
variables/src/: main.rs
