[package]
name = "error_handling"
version = "0.1.0"
authors = ["fugashy <fugashy@icloud.com>"]
edition = "2018"

# abortに設定すればスタックの巻き戻し処理がなくなり，実行ファイルのサイズが小さくなる
[profile.release]
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
